# couchbase-lite-android

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  README.md  build.gradle  cbl-custom-inspections.xml  dependencies-archive.gradle  dependencies-test.gradle  gradle.properties  init_submodules.sh  release-notes.md  settings.gradle  settings.gradle.example  version.txt
shared/: CMakeLists.txt  LiteCoreJNI.exp  build.sh  clean.sh
shared/build_cmake/: build_android.sh  install_android.sh  strip.sh
shared/src/androidTest/java/com/couchbase/lite/internal/: C4AllDocsPerformanceTest.java  C4BaseTest.java  C4BlobStoreTest.java  C4CollatedQueryTest.java  C4DatabaseTest.java  C4DocumentTest.java  C4FleeceTest.java  C4MutableFleeceTest.java  C4NestedQueryTest.java  C4ObserverTest.java  C4PathsQueryTest.java  C4PerfTest.java  C4QueryBaseTest.java  C4QueryTest.java  C4Test.java  C4ThreadingTest.java
shared/src/androidTest/java/com/couchbase/litecore/: C4AllDocsPerformanceTest.java  C4BaseTest.java  C4BlobStoreTest.java  C4CollatedQueryTest.java  C4DatabaseTest.java  C4DocumentTest.java  C4FleeceTest.java  C4MutableFleeceTest.java  C4NestedQueryTest.java  C4ObserverTest.java  C4PathsQueryTest.java  C4PerfTest.java  C4QueryBaseTest.java  C4QueryTest.java  C4Test.java  C4ThreadingTest.java
shared/src/androidTest/java/com/couchbase/litecore/fleece/: FleeceArray.java  FleeceDict.java  FleeceDocument.java  MValueDelegate.java
shared/src/androidTest/java/com/couchbase/litecore/utils/: AndroidUtils.java  Config.java  FileUtils.java  IOUtils.java  StopWatch.java  Utils.java
shared/src/main/cpp/: .gitignore  CMakeLists.txt  LiteCoreJNI.exp  build.sh  clean.sh  jni.h  logging.h  native_c4.cc  native_c4base.cc  native_c4blobstore.cc  native_c4database.cc  native_c4docenumerator.cc  native_c4document.cc  native_c4fulltextmatch.cc  native_c4listener.cc  native_c4observer.cc  native_c4prediction.cc  native_c4query.cc  native_c4queryenumerator.cc  native_c4rawdocument.cc  native_c4replicator.cc  native_c4socket.cc  native_encoder.cc  native_glue.cc  native_glue.hh  socket_factory.h
shared/src/main/cpp/build_cmake/: build.sh  clean.sh
shared/src/main/cpp/jni/: com_couchbase_lite_internal_C4.h  com_couchbase_lite_internal_C4Base.h  com_couchbase_lite_internal_C4BlobKey.h  com_couchbase_lite_internal_C4BlobReadStream.h  com_couchbase_lite_internal_C4BlobStore.h  com_couchbase_lite_internal_C4BlobWriteStream.h  com_couchbase_lite_internal_C4Database.h  com_couchbase_lite_internal_C4DatabaseObserver.h  com_couchbase_lite_internal_C4DocEnumerator.h  com_couchbase_lite_internal_C4Document.h  com_couchbase_lite_internal_C4DocumentObserver.h  com_couchbase_lite_internal_C4FullTextMatch.h  com_couchbase_lite_internal_C4Key.h  com_couchbase_lite_internal_C4Listener.h  com_couchbase_lite_internal_C4Log.h  com_couchbase_lite_internal_C4Prediction.h  com_couchbase_lite_internal_C4Query.h  com_couchbase_lite_internal_C4QueryEnumerator.h  com_couchbase_lite_internal_C4RawDocument.h  com_couchbase_lite_internal_C4Replicator.h  com_couchbase_lite_internal_C4Socket.h  com_couchbase_lite_internal_fleece_AllocSlice.h  com_couchbase_lite_internal_fleece_Encoder.h  com_couchbase_lite_internal_fleece_FLArray.h  com_couchbase_lite_internal_fleece_FLArrayIterator.h  com_couchbase_lite_internal_fleece_FLDict.h  com_couchbase_lite_internal_fleece_FLDictIterator.h  com_couchbase_lite_internal_fleece_FLEncoder.h  com_couchbase_lite_internal_fleece_FLSliceResult.h  com_couchbase_lite_internal_fleece_FLValue.h  com_couchbase_litecore_C4.h  com_couchbase_litecore_C4Base.h  com_couchbase_litecore_C4BlobKey.h  com_couchbase_litecore_C4BlobReadStream.h  com_couchbase_litecore_C4BlobStore.h  com_couchbase_litecore_C4BlobWriteStream.h  com_couchbase_litecore_C4Database.h  com_couchbase_litecore_C4DatabaseObserver.h  com_couchbase_litecore_C4DocEnumerator.h  com_couchbase_litecore_C4Document.h  (+40 more)
shared/src/main/cpp/src/com/couchbase/litecore/: C4.java  C4Base.java  C4BlobKey.java  C4BlobReadStream.java  C4BlobStore.java  C4BlobWriteStream.java  C4Constants.java  C4Database.java  C4DatabaseChange.java  C4DatabaseObserver.java  C4DatabaseObserverListener.java  C4DocEnumerator.java  C4Document.java  C4DocumentEnded.java  C4DocumentObserver.java  C4DocumentObserverListener.java  C4Error.java  C4FullTextMatch.java  C4Key.java  C4Listener.java  C4ListenerAPIs.java  C4ListenerConfig.java  C4Log.java  C4Prediction.java  C4PredictiveModel.java  C4Query.java  C4QueryEnumerator.java  C4QueryOptions.java  C4RawDocument.java  C4ReplicationFilter.java  C4Replicator.java  C4ReplicatorListener.java  C4ReplicatorMode.java  C4ReplicatorStatus.java  C4Socket.java  C4WebSocketCloseCode.java  LiteCoreException.java  RefCounted.java  SharedKeys.java
shared/src/main/java/com/couchbase/lite/: AbstractDatabase.java  AbstractDatabaseConfiguration.java  AbstractFunction.java  AbstractIndex.java  AbstractIndexBuilder.java  AbstractNetworkReachabilityManager.java  AbstractQuery.java  AbstractReplicator.java  AbstractReplicatorConfiguration.java  Array.java  ArrayExpression.java  ArrayExpressionIn.java  ArrayExpressionSatisfies.java  ArrayFunction.java  ArrayInterface.java  Authenticator.java  BaseDatabaseConfiguration.java  BasicAuthenticator.java  Blob.java  BlobInputStream.java  CBLC4Doc.java  CBLConverter.java  CBLData.java  CBLError.java  CBLFLArray.java  CBLFLDataSource.java  CBLFLDict.java  CBLFleece.java  CBLStatus.java  CBLVersion.java  ChangeListener.java  ChangeListenerToken.java  ChangeNotifier.java  Collation.java  ConcurrencyControl.java  Conflict.java  ConflictResolver.java  CouchbaseLiteException.java  CouchbaseLiteRuntimeException.java  Data.java  (+133 more)
shared/src/main/java/com/couchbase/lite/internal/: Misc.java
shared/src/main/java/com/couchbase/lite/query/: Collation.java  CollationExpression.java  FullTextExpression.java  FullTextFunction.java  QueryChange.java  QueryChangeListener.java
shared/src/main/java/com/couchbase/litecore/: NativeLibraryLoader.java
shared/src/main/java/okhttp3/internal/tls/: CustomHostnameVerifier.java
(+1237 files in other folders)
